Adição método Pedrin no Controller